crates/runtime/tests/search/snapshots/integration_models__search__arrow-s3_vectors-dataset-multi_column_megascience_with_where_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "Pedunculagin and alchemillin have astringent and wound-healing properties, possibly due to their high tannin content."
        ],
        "question": [
          "What is the possible action of pedunculagin and alchemillin, chemical components of lady's mantle?"
        ]
      },
      "primary_key": {
        "id": 1015
      },
      "_score": 0.03
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "Dermatomycosis is caused by fungal infections, specifically various forms of *tinea*, such as athlete's foot (*tinea pedis*)."
        ],
        "question": [
          "What causes dermatomycosis, and what are some examples of this condition?"
        ]
      },
      "primary_key": {
        "id": 821
      },
      "_score": 0.03
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "More than 10 years of follow-up is required, as late recurrences (beyond 12 years) have been reported in 5%–10% of patients."
        ],
        "question": [
          "How long of a follow-up is required after spinal cord (SC) ependymoma resection?"
        ]
      },
      "primary_key": {
        "id": 449
      },
      "_score": 0.03
    },
    {
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The body profile of Menidae is very deep and resembles a flat disc, due to the strongly curved ventral contour."
        ],
        "question": [
          "What is the unusual characteristic of the body profile of Menidae (moonfish)?"
        ]
      },
      "primary_key": {
        "id": 1193
      },
      "_score": 0.03
    }
  ]
}
